# libcpprime

./: .clang-format  .clangd  .gitignore  404.html  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  index.html  mkdocs.yml  package.json  pyproject.toml  sitemap.xml  wrangler.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: bench.yml  build-and-test.yml  deploy-docs.yml  docs.yml  main.yml  tests.yml
.zed/: settings.json
bench_results/: bench_summary.md
benchmarks/: isprime_bench.cpp  latest.json  plot_isprime.py
benchmarks/latest/benchmark-Linux-clang/: bench_summary.md
benchmarks/latest/benchmark-Linux-gcc/: bench_summary.md
benchmarks/latest/benchmark-Windows-clang-cl/: bench_summary.md
benchmarks/latest/benchmark-Windows-msvc/: bench_summary.md
benchmarks/runs/20411925005/benchmark-Linux-clang/: bench_summary.md
benchmarks/runs/20411925005/benchmark-Linux-gcc/: bench_summary.md
benchmarks/runs/20411925005/benchmark-Windows-clang-cl/: bench_summary.md
benchmarks/runs/20411925005/benchmark-Windows-msvc/: bench_summary.md
bundled/: create_bundled.py
docs/: index.md  references.md  releases.md
docs/.vitepress/: config.mts
docs/guide/: benchmarks.md  compilation.md  requirements.md
docs/usage/: feature-test-macros.md  is-prime-no-table.md  is-prime.md
docs/worker/: index.ts
examples/: basic.cpp
include/libcpprime/: FeatureTestMacros.hpp  IsPrime.hpp  IsPrimeNoTable.hpp
include/libcpprime/internal/: Environment.hpp  IsPrimeBases64.txt  IsPrimeCommon.hpp  IsPrimeTable17.txt  Utils.hpp
libcpprime/: IsPrime.hpp  IsPrimeNoTable.hpp
libcpprime/internal/: IsPrimeCommon.hpp  IsPrimeTable16.txt
scripts/: bundle_headers.py  publish_benchmarks_to_pages.py
search/: search_index.json
tests/: isprime_tests.cpp  test_isprime.cpp
tests/composites/: 2_SPRP_32bit.txt  2_SPRP_62bit.txt  2_SPRP_64bit.txt  carmichael.txt  carmichael_strong_pseudoprimes.txt  constexpr.txt  hack_7_bases.txt  hack_8_prime_bases.txt  hack_base_2_to_10.txt  hack_known_bases.txt  mult2power1.txt  strong_lucas_pseudoprimes.txt
tests/primes/: constexpr.txt  mult2power1.txt  primes_32bit.txt  primes_64bit.txt
