[project]
name = "libcpprime"
version = "1.3.3"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.7.1",
    "mkdocs-minify-plugin>=0.8.0",
    "numpy>=2.3.4",
    "pillow>=11.3.0",
    "pymdown-extensions>=10.19.1",
]
